# Casacore.jl

./: .gitignore  Project.toml  README.md
.github/: dependabot.yml
.github/workflows/: docs.yml  stable.yml  test.yml
casacorecxx/: CMakeLists.txt
casacorecxx/src/: casacorecxx.cpp
dev/: .documenter-siteinfo.json  index.html  search_index.js
docs/: Project.toml  make.jl
docs/src/: index.md
previews/PR20/: .documenter-siteinfo.json  index.html
previews/PR25/: .documenter-siteinfo.json  index.html
previews/PR26/: .documenter-siteinfo.json  index.html
previews/PR27/: .documenter-siteinfo.json  index.html
src/: LibCasacore.jl  Tables.jl
src/Measures/: Baselines.jl  Directions.jl  Dopplers.jl  EarthMagnetics.jl  Epochs.jl  Frequencies.jl  Positions.jl  RadialVelocities.jl  UVWs.jl
test/: Project.toml  runtests.jl  test-aqua.jl  test-measures.jl  test-tables.jl
v0.4.0/: index.html
v0.4.1/: index.html
